k8s/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  externalTrafficPolicy: Cluster
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook-ui
