k8s/app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sprit2.thga.at
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: spritstat
              port:
                number: 80
